k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord-ms
spec:
  selector:
    app: discord-ms
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  type: ClusterIP
